<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/network_error_info_id"
        android:visibility="gone"
        layout="@layout/layout_neterror_item" />
    <!--main elements-->
    <!--顶部的五个选项-->
    <LinearLayout
        android:id="@+id/fx_music_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/network_error_info_id"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_below="@+id/network_error_info_id"
            android:textAlignment="center"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fx_music_top_yk" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_music_top_tx_yk"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fx_music_top_cnxh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_music_top_tx_cnxh"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fx_music_top_mrtj" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_music_top_tx_mrtj"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fx_music_top_phb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_music_top_tx_phb"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fx_music_top_gd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_music_top_tx_gd"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <!-- 热门电台 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/fx_music_top_rmdt_cotainer_bg"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                >
                <ImageView
                    android:layout_width="71dp"
                    android:layout_height="15dp"
                    android:paddingLeft="8dp"
                    android:src="@drawable/fx_music_rmdt_logo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fx_music_top_mrtj_textview"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="16dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:background="@drawable/fx_music_top_rmdt_textview_bg"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/fx_music_rmdt_play"/>
        </LinearLayout>
        <!--时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="0.6"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:text="@string/fx_music_top_timebar_text_day"
                    android:textColor="@color/black"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/fx_music_top_timebar_text_month"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fx_music_top_timebar_text_week"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:paddingBottom="2dp"
                    android:text="@string/fx_music_top_timebar_text_more_music"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/fx_music_rmdt_more" />
            </LinearLayout>
        </LinearLayout>
        <!--时间下面的TabLayout 这里使用RV实现-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fx_music_song_list_below_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            />

    </LinearLayout>

    <!--main elements-->
    <TextView
        android:id="@+id/txt_nochat"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/item_not_choosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_info" />
</RelativeLayout>